Add /heatmap/sportzone-density
